--- a/PetCenter/backend/config.env
+++ b/PetCenter/backend/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
-DATABASE=mongodb+srv://vsaccone4:<PASSWORD>@cluster0.dimif1a.mongodb.net/pet?retryWrites=true
-DATABASE_PASSWORD=But1coDwdlVkPMwk
+DATABASE=
+DATABASE_PASSWORD=
 PORT=3000
